tests/valid/vardeclared.nim
# Count: 1
# Negative count: 0

var i: int = 1
