tests/invalid/namingconv.nim
# Count: 0
# Negative count: 1

var IsThe: int = 1
